cli/tests/error_008_checkjs.js.out
[WILDCARD]error: Uncaught ReferenceError: consol is not defined
consol.log("hello world!");
^
    at [WILDCARD]tests/error_008_checkjs.js:2:1
